public/scss/views/wpcf7/_rex-wpcf7.scss
$input-min-width: 115px;

.wpcf7 {
	position: relative;

	input,
	textarea,
	select {
		&:focus {
			outline: none;
		}
	}

	.wpcf7-form:not(.no-builder-form) {
		@import 'rex-wpcf7-radios';
		@import 'rex-wpcf7-checkboxes';

		display: flex;
		flex-wrap: wrap;
		cursor: default;

		.wpcf7-rows {
			display: block;
			width: 100%;

			.wpcf7-row {
				display: flex;
				width: 100%;

				.wpcf7-column {
					display: flex;

					&.column-empty {
						min-height: 72px;
					}

					.wpcf7-column-content {
						width: 100%;

						// Fix for twenty-sixteen theme
						p,
						label {
							margin: 0;
						}

						label {
							display: block;
						}

						.wpcf7-form-control-wrap {
							// If you want to cahnge this, some changes are needed in the js too
							// See Rexbuilder_Rexwpcf7 & Rexbuilder_Rexwpcf7_Editor when they update column content dimensions
							display: inline-block;

							min-width: $input-min-width;
							max-width: 100%;
							max-height: 100%;
						}

						.wpwcf7-control-wrap[class^='radio-'],
						.wpwcf7-control-wrap[class^='acceptance-'] {
							display: inline-block;
						}

						.wpcf7-text,
						.wpcf7-select,
						.wpcf7-textarea,
						.wpwcf7-control-wrap[class^='radio-'],
						.wpwcf7-control-wrap[class^='acceptance-'],
						.wpwcf7-control-wrap[class^='file-'] {
							min-width: $input-min-width;
						}

						.wpcf7-radio,
						.wpcf7-acceptance {
							overflow: hidden;
						}
					}

					.rex-wpcf7-column-content-data {
						display: none;
					}

					.wpcf7-list-item {
						display: inline-flex;
						align-items: center;
					}
				}

				&.wpcf7-row__1-column,
				&.wpcf7-row__2-columns,
				&.wpcf7-row__3-columns,
				&.wpcf7-row__4-columns {
					.wpcf7-column {
						float: left;
					}
				}

				&.wpcf7-row__1-column {
					.wpcf7-column {
						width: 100%;
					}
				}

				&.wpcf7-row__2-columns {
					.wpcf7-column {
						width: 50%;
						max-width: 50%;
					}
				}

				&.wpcf7-row__3-columns {
					.wpcf7-column {
						width: 33.3333%;
					}
				}

				&.wpcf7-row__4-columns {
					.wpcf7-column {
						width: 25%;
					}
				}
			}
		}

		.wpcf7-response-output {
			width: 100%;
		}

		.wpcf7-submit {
			min-width: 150px;
			min-height: 40px;

			&:focus {
				outline: none;
			}
		}

		.wpcf7-submit,
		.wpcf7-select,
		.wpcf7-file + label {
			max-width: 100%;
		}

		.wpcf7-file {
			width: 0.1px;
			height: 0.1px;
			opacity: 0;
			overflow: hidden;
			position: absolute;
			z-index: -1;

			& + label {
				font-size: 1.25em;
				font-weight: 700;
				color: white;
				background-color: black;
				display: inline-block;
			}

			& + label {
				cursor: pointer;
			}

			& + label {
				border: 1px solid black;
			}
		}
	}
}

